# Columnchecker

./: LICENSE  MANIFEST.in  setup.cfg
columnchecker/: __init__.py  columnchecker.py
columnchecker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
