[metadata]
name = columnchecker
version = 0.0.1
author = Thomas Gam Mikkelstrup
author_email = coolt76@hotmail.com
description = Helps find irregular data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
